argocd/applications/calibre/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "calibre"
  labels:
    app: "calibre"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "calibre"

  template:
    metadata:
      labels:
        app: "calibre"

    spec:
      containers:
        - name: "calibre"
          image: "lscr.io/linuxserver/calibre-web:0.6.21"

          resources:
            requests:
              cpu: "100m"
              memory: "450Mi"

          ports:
            - name: "app"
              containerPort: 8083

          volumeMounts:
            - name: "library"
              mountPath: "/books"

            - name: "config"
              mountPath: "/config"

        - name: "rsync"
          image: "ogivuk/rsync:latest"

          resources:
            requests:
              cpu: "1m"
              memory: "5Mi"

          volumeMounts:
            - name: "library"
              mountPath: "/data/source/books"
              readOnly: true

            - name: "config"
              mountPath: "/data/source/config"
              readOnly: true

            - name: "backup"
              mountPath: "/data/destination"

            - name: "rsync"
              mountPath: "/rsync"

      volumes:
        - name: "library"
          persistentVolumeClaim:
            claimName: "library"

        - name: "config"
          persistentVolumeClaim:
            claimName: "config"

        - name: "backup"
          persistentVolumeClaim:
            claimName: "backup"

        - name: "rsync"
          persistentVolumeClaim:
            claimName: "rsync"
