argocd/applications/calibre/routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: "calibre"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "calibre"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "calibre-web"
  namespace: "calibre"

spec:
  entryPoints:
    - web

  routes:
    - match: "Host(`calibre.tlake.io`) || Host(`calibre-web.tlake.io`)"
      kind: Rule
      services:
        - name: "calibre"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "calibre-websecure"
  namespace: "calibre"

spec:
  entryPoints:
    - websecure

  routes:
    - match: "Host(`calibre.tlake.io`) || Host(`calibre-web.tlake.io`)"
      kind: Rule
      services:
        - name: "calibre"
          port: "http-traffic"

  tls:
    certResolver: "production"
